<project name="javaforce" default="jar" basedir="." xmlns:if="ant:if" xmlns:unless="ant:unless">
  <description>JavaForce SDK</description>
  <!-- set global properties for this build -->
  <property name="app" value="javaforce"/>
  <property name="apptype" value="console"/>
  <property name="src" location="src"/>
  <property name="build" location="classes"/>
  <property name="home" value="."/>
  <property name="noelf" value="true"/>

  <!-- libxcursor dep helps load libjawt.so which the loader attempts to load during startup -->

  <property name="debian.depends" value="default-jre        , jfcifs, jfsshd-core, jfsshd-common, jfsshd-sftp, jfsshd-scp, jfslf4j-api, jfslf4j-jdk14, jfslf4j-nop, jfslf4j-reload4j, jfslf4j-simple, libv4l-0 , desktop-file-utils, libxcursor1, libncurses6"/>
  <property name="fedora.depends" value="java-latest-openjdk, jfcifs, jfsshd-core, jfsshd-common, jfsshd-sftp, jfsshd-scp, jfslf4j-api, jfslf4j-jdk14, jfslf4j-nop, jfslf4j-reload4j, jfslf4j-simple, libv4l   , desktop-file-utils, libXcursor , ncurses"/>
  <property name="arch.depends"   value="jre-openjdk        , jfcifs, jfsshd-core, jfsshd-common, jfsshd-sftp, jfsshd-scp, jfslf4j-api, jfslf4j-jdk14, jfslf4j-nop, jfslf4j-reload4j, jfslf4j-simple, v4l-utils, desktop-file-utils, libxcursor , ncurses"/>

  <property environment="env"/>

  <fileset dir="." id="classpath">
    <include name="bcprov.jar"/>
    <include name="bctls.jar"/>
    <include name="jargs.jar"/>
    <include name="jcifs.jar"/>
    <include name="jdom.jar"/>
    <include name="llrp.jar"/>
    <include name="sshd-common.jar"/>
    <include name="sshd-core.jar"/>
    <include name="sshd-sftp.jar"/>
    <include name="sshd-scp.jar"/>
    <include name="batik-all.jar"/>
    <include name="slf4j-api.jar"/>
  </fileset>

  <import file="base.xml"/>

  <property name="version" value="${javaforce-version}"/>

  <!-- get native dependancies -->

  <available property="have-glfw" file="native/glfw/src/window.c"/>
  <target name="get-glfw" unless="have-glfw" description="download glfw">
    <exec command="git clone https://github.com/glfw/glfw.git native/glfw"/>
    <exec command="git checkout tags/${glfw-version}" dir="native/glfw"/>
  </target>

  <available property="have-stb" file="native/stb/stb_truetype.h"/>
  <target name="get-stb" unless="have-stb" description="download stb">
    <exec command="git clone https://github.com/nothings/stb.git native/stb"/>
  </target>

  <target name="get-ffmpeg-win64-bin" description="download ffmpeg for Win64">
    <echo message="Downloading: ffmpeg-win64-bin-${ffmpeg-version}.zip"/>
    <get src="http://javaforce.sourceforge.net/ffmpeg-win64-bin-${ffmpeg-version}.zip" dest="ffmpeg-win64-bin-${ffmpeg-version}.zip"/>
    <mkdir dir="ffmpeg-bin/${ffmpeg-version}"/>
    <unzip src="ffmpeg-win64-bin-${ffmpeg-version}.zip" dest="ffmpeg-bin/${ffmpeg-version}"/>
  </target>

  <target name="get-ffmpeg-win64-src" description="download ffmpeg for Win64">
    <echo message="Downloading: ffmpeg-win64-src-${ffmpeg-version}.zip"/>
    <get src="http://javaforce.sourceforge.net/ffmpeg-win64-src-${ffmpeg-version}.zip" dest="ffmpeg-win64-src-${ffmpeg-version}.zip"/>
    <mkdir dir="ffmpeg-src/${ffmpeg-version}"/>
    <unzip src="ffmpeg-win64-src-${ffmpeg-version}.zip" dest="ffmpeg-src/${ffmpeg-version}"/>
  </target>

  <import file="get-jars.xml"/>

  <available property="have-repo" file="repo/readme.txt"/>
  <target name="get-repo" unless="have-repo" description="download repo">
    <exec command="git clone https://github.com/pquiring/repo"/>
  </target>

  <target name="depjars">
    <!-- depends via antcalls -->
    <antcall target="depnatives"/>
    <antcall target="get-glfw"/>
    <antcall target="get-stb"/>
    <antcall target="get-repo"/>
    <antcall target="getjars"/>
    <antcall target="jar-jcifs"/>
    <antcall target="jar-bcprov"/>
    <antcall target="jar-bctls"/>
    <antcall target="jar-bcutil"/>
    <antcall target="jar-filters"/>
    <antcall target="jar-llrp"/>
    <antcall target="jar-jdom"/>
    <antcall target="jar-sshd-core"/>
    <antcall target="jar-sshd-common"/>
    <antcall target="jar-sshd-sftp"/>
    <antcall target="jar-sshd-scp"/>
    <antcall target="jar-jargs"/>
    <antcall target="jar-mina-core"/>
    <antcall target="jar-slf4j-api"/>
    <antcall target="jar-slf4j-simple"/>
    <antcall target="jar-slf4j-nop"/>
    <antcall target="jar-log4j-core"/>
    <antcall target="jar-log4j-api"/>
    <antcall target="jar-log4j-1.2-api"/>
    <antcall target="jar-batik-all"/>
    <antcall target="jar-xmlgraphics-commons"/>
    <antcall target="jar-xml-apis-ext"/>
  </target>

  <target name="compile" depends="depjars" description="compile the source">
    <!-- Compile the java code from ${src} into ${build} -->
    <mkdir dir="${build}"/>
    <javac srcdir="${src}" destdir="${build}" target="${jdkver}" source="${jdkver}" debug="true" includeantruntime="false" nativeheaderdir="native/headers">
      <classpath>
        <fileset refid="classpath"/>
      </classpath>
    </javac>
  </target>

  <target name="jar" depends="depjars,compile" description="build jar file">
    <!-- Build jar file from class files -->
    <jar destfile="javaforce.jar" includes="**/*.class" basedir="${build}">
      <fileset dir="${src}">
        <include name="**/*.png"/>
        <include name="**/*.html"/>
        <include name="**/*.js"/>
        <include name="**/*.css"/>
        <include name="**/*.ttf"/>
      </fileset>
      <fileset dir=".">
        <include name="META-INF/**/*"/>
      </fileset>
    </jar>
    <copy file="javaforce.jar" tofile="${lib}/javaforce-${version}.jar"/>
  </target>

  <target name="repo" description="download repo files">
    <exec command="git clone https://github.com/pquiring/repo"/>
  </target>

  <target name="install" description="install files">
    <copy file="javaforce.jar" todir="/usr/share/java"/>
    <copy file="bcprov.jar" todir="/usr/share/java"/>
    <copy file="bctls.jar" todir="/usr/share/java"/>
    <copy file="bcutil.jar" todir="/usr/share/java"/>
    <copy file="filters.jar" todir="/usr/share/java"/>
  </target>

  <target name="jre-base" description="build JRE for bundled JRE builds with only base">
    <property file="jf.properties"/>
    <exec command="jlink --module-path ${java.home}/jmods --add-modules ${jre-base} --output jre_base"/>
    <delete>
      <fileset dir="jre_base/bin" includes="java**.exe"/>
    </delete>
    <delete dir="jre_base/include"/>
    <delete dir="jre_base/legal"/>
  </target>

  <target name="jre-base-desktop" description="build JRE for bundled JRE builds with desktop (swing) support">
    <property file="jf.properties"/>
    <exec command="jlink --module-path ${java.home}/jmods --add-modules ${jre-base},${jre-desktop} --output jre_base_desktop"/>
    <delete>
      <fileset dir="jre_base_desktop/bin" includes="java**.exe"/>
    </delete>
    <delete dir="jre_base_desktop/include"/>
    <delete dir="jre_base_desktop/legal"/>
  </target>

  <target name="jre-base-desktop-java" description="build JRE for bundled JRE builds with desktop (swing) support (includes java executables)">
    <property file="jf.properties"/>
    <exec command="jlink --module-path ${java.home}/jmods --add-modules ${jre-base},${jre-desktop} --output jre_base_desktop_java"/>
    <delete dir="jre_base_desktop_java/include"/>
    <delete dir="jre_base_desktop_java/legal"/>
  </target>

  <target name="jre-base-javac" description="build JRE for bundled JRE builds with base and Java compiler">
    <property file="jf.properties"/>
    <exec command="jlink --module-path ${java.home}/jmods --add-modules ${jre-base},${jre-javac} --output jre_base_javac"/>
    <delete>
      <fileset dir="jre_base_javac/bin" includes="java**.exe"/>
    </delete>
    <delete dir="jre_base_javac/include"/>
    <delete dir="jre_base_javac/legal"/>
  </target>

  <target name="clean" description="deletes compiled files">
    <delete>
      <fileset dir="classes" includes="**/*.class"/>
      <fileset dir="${lib}" includes="javaforce-${version}.jar"/>
      <fileset dir="." includes="*.jar"/>
      <fileset dir="." includes="*.asc"/>
      <fileset dir="native/headers" includes="*.h"/>
    </delete>
  </target>
</project>
